--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,80 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="background_grey">#E9E9E9</color>
+
+    <color name="circle_menu_center_button_color">#2598F5</color>
+    <color name="circle_menu_center_button_icon_color">#444444</color>
+    <color name="circle_menu_button_icon_color">#2598F5</color>
+
+    <color name="color_primary">@color/white</color>
+    <color name="color_primary_dark">@color/black</color>
+    <color name="color_accent">@color/blue</color>
+    <color name="color_background">@color/white</color>
+    <color name="text_color_secondary">@color/black</color>
+    <color name="navigation_bar_color">@color/black2</color>
+
+    <color name="dialog_background_color">@color/white</color>
+    <color name="toolbar_background_color">@color/white</color>
+    <color name="toolbar_title_color">@color/black</color>
+    <color name="toolbar_menu_color">@color/black</color>
+    <color name="toolbar_menu_create_barcode_button_disabled_color">@color/gray5</color>
+    <color name="toolbar_menu_create_barcode_button_enabled_color">@color/black</color>
+    <color name="tab_layout_background_color">@color/white</color>
+    <color name="tab_layout_text_color_inactive">@color/gray_transparent2</color>
+    <color name="tab_layout_text_color_active">@color/blue</color>
+    <color name="bottom_navigation_background_color">@color/white</color>
+    <color name="bottom_navigation_text_color_inactive">@color/gray11</color>
+    <color name="bottom_navigation_text_color_active">@color/blue</color>
+    <color name="create_barcode_group_title_text_color">@color/gray6</color>
+    <color name="default_text_color">@color/black</color>
+    <color name="secondary_text_color">@color/gray</color>
+    <color name="delimiter_color">@color/gray5</color>
+    <color name="delimiter_color2">@color/gray12</color>
+    <color name="switch_background_color">@color/gray17</color>
+    <color name="button_background_color_disabled">@color/gray4</color>
+    <color name="crop_image_view_background_color">@color/white</color>
+    <color name="edit_text_text_color">@color/black</color>
+    <color name="edit_text_hint_color">@color/gray10</color>
+    <color name="date_time_picker_dialog_background_color">@color/white</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="black2">#202124</color>
+    <color name="black3">#3B3C40</color>
+    <color name="black_transparent">#2C000000</color>
+    <color name="black_transparent2">#5E000000</color>
+    <color name="black_transparent3">#40000000</color>
+    <color name="gray">#7D7D7D</color>
+    <color name="gray4">#F8F8F8</color>
+    <color name="gray5">#CCCCCC</color>
+    <color name="gray6">#666666</color>
+    <color name="gray10">#9E9E9E</color>
+    <color name="gray11">#5F6267</color>
+    <color name="gray12">#E0E0E0</color>
+    <color name="gray14">#9BA0A6</color>
+    <color name="gray15">#9C9FA6</color>
+    <color name="gray16">#2A2A2E</color>
+    <color name="gray17">#636466</color>
+    <color name="gray18">#B2B2B2</color>
+    <color name="gray19">#424242</color>
+    <color name="gray_transparent2">#6B7D7D7D</color>
+    <color name="yellow">#FDD70A</color>
+    <color name="blue">#00B1FF</color>
+    <color name="blue2">#9EDBF7</color>
+    <color name="blue3">#00BFC9</color>
+    <color name="blue4">#1A73E9</color>
+    <color name="green">#46CC47</color>
+    <color name="red">#FB2A2D</color>
+    <color name="orange">#FF9700</color>
+    <color name="orange_light">#D8BC92</color>
+
+    <color name="red_primary">#ff0000</color>
+    <color name="colorPrimary">#2196f3</color>
+    <color name="colorPrimaryDark">#1565c0</color>
+    <color name="colorAccent">#0097A7</color>
+    <color name="colorTranslucent">#50000000</color>
+    <color name="lightColor">#64E71A</color>
+    <color name="lightGray">#D1D0D0</color>
+    <color name="darkBrown">#2B2828</color>
 </resources>
