--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -83,4 +83,5 @@
     <color name="lightColor">#64E71A</color>
     <color name="lightGray">#D1D0D0</color>
     <color name="darkBrown">#2B2828</color>
+    <color name="textColorAppNight">#EFEFEF</color>
 </resources>
