--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,11 +13,59 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
     <style name="TextViewDrawer">
         <item name="drawableEndCompat">@drawable/ic_back_right</item>
         <item name="android:drawablePadding">@dimen/_10sdp</item>
-        <item name="android:textSize">@dimen/_14sdp</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:padding">@dimen/_15sdp</item>
+        <item name="drawableTint">?colorPrimary</item>
+    </style>
+
+    <style name="SettingsGroupTitleTextViewStyle">
+        <item name="android:textColor">?colorPrimary</item>
+        <item name="android:textSize">@dimen/_14sdp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">@dimen/_5sdp</item>
+    </style>
+
+
+
+    <style name="MyDialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowMinWidthMajor">80%</item>
+        <item name="android:windowMinWidthMinor">80%</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="marginHorizontal">@dimen/_10sdp</item>
+        <item name="colorAccent">?attr/colorPrimaryVariant</item>
+    </style>
+
+    <style name="roundedCornersImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/_10sdp</item>
+        <item name="strokeWidth">@dimen/_2sdp</item>
+        <item name="strokeColor">?attr/colorPrimaryVariant</item>
+    </style>
+
+    <style name="AppBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="colorAccent">?attr/colorPrimaryVariant</item>
+    </style>
+
+    <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/bg_bottomsheet</item>
+        <item name="behavior_skipCollapsed">true</item>
+        <item name="behavior_fitToContents">true</item>
+        <item name="behavior_peekHeight">1000dp</item>
+        // yep, that helped to skip collapsed state at initial
+        <item name="behavior_hideable">true</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="colorAccent">?attr/colorPrimaryVariant</item>
     </style>
 </resources>
