--- a/app/src/main/res/layout/layout_bottomsheet_sort.xml
+++ b/app/src/main/res/layout/layout_bottomsheet_sort.xml
@@ -20,56 +20,37 @@
 
 
     <TextView
+        style="@style/TextViewDrawer"
         android:id="@+id/txtTimeAc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="@dimen/_10sdp"
-        android:paddingHorizontal="@dimen/_15sdp"
-        android:drawablePadding="@dimen/_10sdp"
         android:text="@string/sort_by_time_ID"
-        android:textSize="@dimen/_12ssp"
-        app:drawableStartCompat="@drawable/ic_star"
-        app:drawableTint="?colorAccent"
-        app:drawableEndCompat="@drawable/ic_back_right" />
+        app:drawableStartCompat="@drawable/ic_star" />
 
 
     <TextView
+        style="@style/TextViewDrawer"
         android:id="@+id/txtNameAc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="@dimen/_10sdp"
-        android:paddingHorizontal="@dimen/_15sdp"
-        android:drawablePadding="@dimen/_10sdp"
         android:text="@string/sort_by_name"
-        android:textSize="@dimen/_12ssp"
-        app:drawableStartCompat="@drawable/ic_star"
-        app:drawableTint="?colorAccent"
-        app:drawableEndCompat="@drawable/ic_back_right" />
+        app:drawableStartCompat="@drawable/ic_star"/>
 
     <TextView
+        style="@style/TextViewDrawer"
         android:id="@+id/txtTimeCreate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="@dimen/_10sdp"
-        android:paddingHorizontal="@dimen/_15sdp"
-        android:drawablePadding="@dimen/_10sdp"
         android:text="@string/sort_by_time_create"
-        android:textSize="@dimen/_12ssp"
-        app:drawableTint="?colorAccent"
-        app:drawableStartCompat="@drawable/ic_star"
-        app:drawableEndCompat="@drawable/ic_back_right" />
+        app:drawableStartCompat="@drawable/ic_star" />
 
     <TextView
+        style="@style/TextViewDrawer"
         android:id="@+id/txtTimeOpen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="@dimen/_10sdp"
-        android:paddingHorizontal="@dimen/_15sdp"
-        android:drawablePadding="@dimen/_10sdp"
         android:text="@string/sort_by_time_open"
         android:textSize="@dimen/_12ssp"
-        app:drawableStartCompat="@drawable/ic_star"
-        app:drawableTint="?colorAccent"
-        app:drawableEndCompat="@drawable/ic_back_right" />
+        app:drawableStartCompat="@drawable/ic_star" />
 
 </LinearLayout>
