--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,6 @@
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:drawablePadding="@dimen/_5sdp"
                         android:gravity="center"
-                        android:text="@string/customer_analysis"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_12sdp"
                         android:textStyle="bold"
@@ -54,6 +53,7 @@
                         android:layout_height="wrap_content"
                         android:background="@color/orange"
                         android:textAlignment="center"
+                        android:layout_marginHorizontal="@dimen/_20sdp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
