--- a/app/src/main/res/layout/background_dialog.xml
+++ b/app/src/main/res/layout/background_dialog.xml
@@ -35,6 +35,7 @@
             android:orientation="horizontal">
 
             <RadioButton
+                android:id="@+id/rbColor1"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_margin="@dimen/_10sdp"
@@ -43,6 +44,7 @@
                 android:backgroundTint="@color/teal_200"/>
 
             <RadioButton
+                android:id="@+id/rbColor2"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_margin="@dimen/_10sdp"
@@ -51,6 +53,7 @@
                 android:backgroundTint="@color/orange" />
 
             <RadioButton
+                android:id="@+id/rbColor3"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_margin="@dimen/_10sdp"
@@ -59,6 +62,7 @@
                 android:backgroundTint="@color/blue" />
 
             <RadioButton
+                android:id="@+id/rbColor4"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_margin="@dimen/_10sdp"
@@ -76,6 +80,7 @@
             android:orientation="horizontal">
 
             <RadioButton
+                android:id="@+id/rbColor5"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_margin="@dimen/_10sdp"
@@ -84,6 +89,7 @@
                 android:backgroundTint="@color/yellow" />
 
             <RadioButton
+                android:id="@+id/rbColor6"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_margin="@dimen/_10sdp"
@@ -92,6 +98,7 @@
                 android:backgroundTint="@color/red" />
 
             <RadioButton
+                android:id="@+id/rbColor7"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_margin="@dimen/_10sdp"
@@ -100,6 +107,7 @@
                 android:backgroundTint="@color/blue4" />
 
             <RadioButton
+                android:id="@+id/rbColor8"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_margin="@dimen/_10sdp"
