--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -77,7 +77,7 @@
 
     <color name="red_primary">#ff0000</color>
     <color name="colorPrimary">#2196f3</color>
-    <color name="colorPrimaryDark">#1565c0</color>
+    <color name="blue_dark">#1565c0</color>
     <color name="colorAccent">#0097A7</color>
     <color name="colorTranslucent">#50000000</color>
     <color name="lightColor">#64E71A</color>
